2008-09-29  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-ubuntu-p): Add `str'
	to `match-string-no-properties'.

2008-09-28  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-trim-blanks): New.
	(tinydebian-bug-url): Correct last `cond' statement.
	(tinydebian-bug-browse-url-by-bug): Use `tinydebian-trim-blanks'.

2008-09-27  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-ubuntu-p): Return bug number.
	(tinydebian-bug-sourceforge-p): New.
	(tinydebian-bug-browse-url-by-bug): Check return value
	of `tinydebian-bug-url'.
	(tinydebian-bug-sourceforge-name-to-group-id): New.
	(tinydebian-macro-retrieve-synchronously): New.
	(tinydebian-bug-nbr-string): Add Sourceforge support.
	(tinydebian-bug-sourceforge-string-p): New.
	(tinydebian-bts-mail-ctrl-forward-main): Set
	`message-reply-buffer', so that C-c C-y can insert original
	message.

2008-09-23  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-any): In Gnus Summary
	buffer, search only current header line.
	(tinydebian-bug-nbr-any-in-string): New.
	(tinydebian-bug-nbr-any-at-current-line): New.
	(tinydebian-bug-nbr-any-at-current-point): Move code to
	`tinydebian-bug-nbr-any-in-string'.
	(tinydebian-gnus-summary-mode-summary-line): New.

2008-09-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-ubuntu-p): Detect Ubuntu
	bug Subject line in Summary buffer.
	(tinydebian-bug-url): Correct Ubuntu bug URL.

2008-09-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-forwarded-main):
	New.
	(ti::macrof-minor-mode-wizard): Add to menu
	`tinydebian-bts-mail-ctrl-forwarded-main'.
	(tinydebian-bts-mode-gnus-summary-maybe-turn-on): Remove
	ceck for newsgroup name, because mail can also arrive to INBOX.
	Just turn on `turn-on-tinydebian-bts-mode' for all *Summary*
	buffers.
	(to level::Overview of features): Improve documentation.
